Update PetController.java