@@ -3,10 +3,10 @@ package io.github.apulbere.petshop;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static io.github.apulbere.petshop.QPet.pet;
 
@@ -26,6 +26,6 @@ public class PetController {
         return petRepository.findAll(predicate, page)
                 .stream()
                 .map(petMapper::map)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
